--- a/resources/css/ProductComponent.css
+++ b/resources/css/ProductComponent.css
@@ -326,7 +326,12 @@ input
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
 }
-.filter-link-active 
+.filter-link:not(.filter-link-active):hover
+{
+    color: #6c79e08c;
+    border-bottom: 1px solid #6c79e08c;
+}
+.filter-link-active
 {
     color: #6c7ae0;
     border-bottom: 1px solid #6c7ae0;
