--- a/resources/css/BreadcrumbsComponent.css
+++ b/resources/css/BreadcrumbsComponent.css
@@ -1,10 +1,19 @@
 .breadcrumb-container
 {
     position: relative;
+    /* top: 80px; */
+    left: 0px;
 }
 .bread-crumb
 {
-
+    font-family: Poppins-Regular;
+    font-size: 12px;
+    line-height: 1.833333;
+    color: #555;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
     -webkit-flex-wrap: wrap;
     -moz-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
@@ -18,4 +27,11 @@
     padding-right: 15px;
     padding-left: 25px;
     padding-top: 30px;
+}
+.bread-crumb span
+{
+    font-family: Poppins-Regular;
+    font-size: 12px;
+    line-height: 1.833333;
+    color: #999;
 }
