--- a/resources/css/CartComponent.css
+++ b/resources/css/CartComponent.css
@@ -150,6 +150,7 @@
 .header-cart-item-img
 {
     width: 60px;
+    height: 60px;
     position: relative;
     margin-right: 20px;
     cursor: pointer;
@@ -157,6 +158,7 @@
 .header-cart-item-img img
 {
     width: 100%;
+    height: 100%;
 }
 .header-cart-item-img::after
 {
