--- a/resources/css/CheckoutFormComponent.css
+++ b/resources/css/CheckoutFormComponent.css
@@ -155,6 +155,16 @@ tbody
     color: #fff;
     background-color: #6774D5;
 }
+.num-product::-webkit-outer-spin-button,
+.num-product::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.num-product[type=number] {
+  -moz-appearance: textfield;
+}
 input.num-product {
     -moz-appearance: textfield;
     appearance: none;
@@ -576,8 +586,42 @@ input.num-product {
     background-color: #6774D5;
 }
 
+.shipping_method_address_wrap
+{
+    height: 0;
+    opacity: 0;
+    transition: all 0.6s;
+    -webkit-transition: all 0.6s;
+    -moz-transition: all 0.6s;
+    -ms-transition: all 0.6s;
+    -o-transition: all 0.6s;
+}
+.shipping_method_address_wrap_view
+{
+    height: fit-content;
+    opacity: 1;
+}
+
 #shipping_method_address
 {
-    display: none;
     width: 100%;
+    height: 100%;
+}
+
+.shipping-method-progress-container
+{
+    width: 100%;
+    height: 10px;
+    background: #f1f1f1;
+}
+.shipping-method-progress-container-hide
+{
+    display: none;
+}
+
+.shipping-method-progress-bar
+{
+    height: 100%;
+    background: #4caf50;
+    width: 0%;
 }
